--- a/static/styles2.css
+++ b/static/styles2.css
@@ -81,13 +81,19 @@
     margin:40px auto;
     margin-bottom:0px;
     text-align:center;
+    align-items: center;
 
 }
 
 .output{
+    width:600px;
+    color: #000;
+    font-family: Keania One;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
     text-align: center;
-    max-width: 100%;
-    align-items: center;
+    margin:0 auto;
 }
 .submit-button{
     margin:0 auto;
